add more scripts

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   ],
   "scripts": {
     "client:dev": "npm run dev --workspace=client",
+    "client:build": "npm run build --workspace=client",
+    "client:serve": "npm run serve --workspace=client",
     "server:dev": "npm run dev --workspace=api",
     "start": "concurrently --kill-others-on-fail \"npm run server:dev\"  \"npm run client:dev\""
   },
