--- a/api/app.json
+++ b/api/app.json
@@ -1,4 +1,5 @@
 {
   "name": "mern-monorepo backend",
+  "repository": "https://github.com/dominggo1999/mern-monorepo/tree/master/api",
   "description": "A barebones Node.js app using Express"
 }
