--- a/app.json
+++ b/app.json
@@ -1,5 +1,15 @@
 {
-  "name": "mern-monorepo backend",
-  "repository": "https://github.com/dominggo1999/mern-monorepo/tree/master/api",
+  "name": "mern-monorepo-backend",
+  "repository": "https://github.com/dominggo1999/mern-monorepo",
+  "buildpacks": [
+    "heroku/nodejs"
+  ],
+  "env": {
+    "PROJECT_PATH": {
+      "description": "Backend Code Repository",
+      "required": true,
+      "value": "https://github.com/dominggo1999/mern-monorepo/tree/master/api"
+    }
+  },
   "description": "A barebones Node.js app using Express"
 }
