--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@mern-monorepo/api",
   "main": "api/index.js",
+  "repository": "",
   "scripts": {
     "start:serverless": "vercel dev",
     "start:serverful": "cross-env SERVERFUL=true node api/index.js",
@@ -10,13 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1",
-    "nodemon": "^2.0.16"
+    "express": "^4.18.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
     "eslint": "^8.17.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.26.0",
+    "nodemon": "^2.0.16"
   }
 }
