--- a/api/package.json
+++ b/api/package.json
@@ -19,5 +19,8 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.16"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
