--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -27,6 +27,12 @@
         ],
         "prefer-destructuring": 0,
         "consistent-return": 0,
-        "no-plusplus": 0
+        "no-plusplus": 0,
+        "import/extensions": [
+            "error",
+            {
+                "js": "always"
+            }
+        ]
     }
 }
