client : change eslint rule for import/extensions

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -64,6 +64,14 @@
         "jsx-a11y/no-noninteractive-element-interactions": 0,
         "no-useless-escape": 0,
         "import/no-extraneous-dependencies": 0,
-        "jsx-a11y/anchor-is-valid": 0
+        "jsx-a11y/anchor-is-valid": 0,
+        "import/extensions": [
+            "error",
+            {
+                "js": "always",
+                "jsx": "always",
+                "json": "always"
+            }
+        ]
     }
 }
